Added dynamic tree map

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "aos": "^2.3.4",
     "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
+    "chartjs": "^0.3.24",
     "compromise": "^14.10.1",
     "oh-vue-icons": "^1.0.0-rc3",
     "tsparticles": "^2.12.0",
     "v-wave": "^1.5.1",
     "vue": "^3.3.4",
     "vue-animate-onscroll": "^1.0.8",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.5",
+    "vue-spinner": "^1.0.4",
     "vue-toast-notification": "^3.1.2",
     "vue3-apexcharts": "^1.4.4",
     "vue3-particles": "^2.12.0"
